--- a/arch/arm64/boot/dts/freescale/mba8xx-common.dtsi
+++ b/arch/arm64/boot/dts/freescale/mba8xx-common.dtsi
@@ -152,7 +152,7 @@
 		compatible = "fsl,imx-audio-tlv320aic32x4";
 		model = "tqm-tlv320aic32";
 		ssi-controller = <&sai1>;
-		audio-codec = <&codec>;
+		audio-codec = <&tlv320aic3x04>;
 	};
 };
 
@@ -242,7 +242,7 @@
 };
 
 &i2c1 {
-	codec: tlv320aic3x04@18 {
+	tlv320aic3x04: audio-codec@18 {
 		compatible = "ti,tlv320aic32x4";
 		reg = <0x18>;
 
