--- a/arch/arm64/boot/dts/freescale/mb-smarc-2-common.dtsi
+++ b/arch/arm64/boot/dts/freescale/mb-smarc-2-common.dtsi
@@ -96,7 +96,7 @@
 		compatible = "fsl,imx-audio-tlv320aic32x4";
 		model = "tqm-tlv320aic32";
 		ssi-controller = <&sai1>;
-		audio-codec = <&codec>;
+		audio-codec = <&tlv320aic3x04>;
 	};
 };
 
@@ -133,7 +133,7 @@
 };
 
 &i2c0 {
-	codec: tlv320aic3x04@18 {
+	tlv320aic3x04: audio-codec@18 {
 		compatible = "ti,tlv320aic32x4";
 		reg = <0x18>;
 		clocks = <&mclkout0_lpcg 0>;
