--- a/Documentation/devicetree/bindings/arm/fsl.yaml
+++ b/Documentation/devicetree/bindings/arm/fsl.yaml
@@ -546,7 +546,7 @@ properties:
           TQMa8XxS is a series of SOM featuring NXP i.MX8X system-on-chip
           variants. It has the SMARC form factor and is designed to be placed on
           different carrier boards. MB-SMARC-2 is a carrier reference design.
-        oneOIf:
+        oneOf:
           - items:
             - enum:
                 - tq,imx8qxp-tqma8xqps-mb-smarc-2 # TQ-Systems GmbH TQMa8QXPS SOM on MB-SMARC-2
